@@ -52,7 +52,7 @@ class TestMeetingItemView(MockTestCase):
             'the <b>conclusion</b>')
         self.expect(self.context.getRelated_items()).result([
                 self.create_dummy(Title=lambda: 'a file',
-                                  absolute_url=lambda: '/item/a-file')])
+                                  absolute_url=lambda: '/item/a%20file')])
 
         self.replay()
 
@@ -70,6 +70,6 @@ class TestMeetingItemView(MockTestCase):
              'text': 'agenda {\\bf item} text',
              'conclusion': 'the {\\bf conclusion}',
              'relatedItems': [{'title': 'a file',
-                               'url': '/item/a-file'}]})
+                               'url': '/item/a\\%20file'}]})
 
         view.render()
