@@ -5,6 +5,9 @@ Changelog
 1.3.4 (unreleased)
 ------------------
 
+- Meeting item PDF: escape urls of related items, so that spaces (%) do not break LaTeX.
+  [jone]
+
 - Meeting item: remove some css-classes for fixing bad styling when there are nested tables.
   [jone]
 
